fix tech stack alignment

--- a/components/TechStack/styles.scss
+++ b/components/TechStack/styles.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   max-width: 920px;
   align-content: flex-start;
   margin: 0 auto;
@@ -42,10 +43,14 @@
     letter-spacing: $letter-spacing-small;
     display: flex;
     flex-direction: column;
-    width: 150px;
+    width: 110px;
     text-transform: uppercase;
     align-items: center;
     margin-bottom: 50px;
+
+    @media screen and (min-width: $screen-md) {
+      width: 150px;
+    }
 
     img {
       max-width: 85%;
